add LaTeX support,decorate the theme and add old post form old blog

--- a/config.toml
+++ b/config.toml
@@ -15,19 +15,10 @@ disqusShortname = ""
 
 
 [[menu.main]]
-    name = "编程"
-    url = "/categories/编程"
+    name = "首页"
+    url = "/"
     weight = 4
 
-[[menu.main]]
-    name = "数学"
-    url = "/categories/数学"
-    weight = 5
-
-[[menu.main]]
-    name = "乱扯一通"
-    url = "/categories/乱扯一通"
-    weight = 6
 [[menu.main]]
     name = "关于"
     url = "/about"
@@ -37,7 +28,7 @@ disqusShortname = ""
 
 [params]
     description = ""
-    subtitle = "啊咧？！我滴timeline？(ʘ̆ʚʘ̆)"
+    subtitle = "有何贵干(ʘ̆ʚʘ̆)"
     title = "在下喵爵"
     [params.logo]
     url = "logo.jpg"
