--- a/config.toml
+++ b/config.toml
@@ -28,8 +28,8 @@ disqusShortname = ""
 
 [params]
     description = ""
-    subtitle = "有何贵干(ʘ̆ʚʘ̆)"
-    title = "在下喵爵"
+    subtitle = "螺旋上天法力无边(≖ ◡ ≖)"
+    title = "nyakokishi"
     [params.logo]
     url = "logo.jpg"
     width = 50
