--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ disqusShortname = ""
 
 [params]
     description = ""
-    subtitle = "螺旋上天法力无边"
+    subtitle = "螺旋上天法力无边 (༎ຶ‿༎ຶ)"
     title = "nyakokishi"
     [params.logo]
     url = "logo.jpg"
