--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ disqusShortname = ""
 
 [params]
     description = ""
-    subtitle = "螺旋上天法力无边 (༎ຶ‿༎ຶ)"
+    subtitle = "笑着活下去 -> 笑容逐渐猥琐 -> 猥琐的活下去 (༎ຶ‿༎ຶ)"
     title = "nyakokishi"
     [params.logo]
     url = "logo.jpg"
