--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ disqusShortname = ""
 
 [params]
     description = ""
-    subtitle = "猥琐扭曲卡哇伊"
+    subtitle = "弱哭了 (༎ຶ ‿ ༎ຶ )"
     title = "nyakokishi"
     [params.logo]
     url = "logo.jpg"
